# configcrab

./: .gitignore  Cargo.toml  README.md  configcrab.yaml
src/: crab_args.rs  main.rs  tests.rs
