[package]
name = "configcrab"
version = "0.1.0"
authors = ["aadriance <primaryartemis@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
anyhow = "1.0"
once_cell = "1.7.2"